Revert "Bug 107272 - Truncated STK with soft-button"
This reverts commit 5837b4acd4a0d4639e8ff0abcbec60822d89edf0.

Please see bug 1072728. Reverting due to incorrect bug number.

--- a/apps/system/style/icc.css
+++ b/apps/system/style/icc.css
@@ -8,7 +8,8 @@
   display: none;
   position: fixed;
   width: 100%;
-  top: var(--statusbar-height);
+  height: 100%;
+  top: 0;
   background: #f4f4f4;
   color: #000;
 }
@@ -18,7 +19,6 @@
   position: absolute;
   width: 100%;
   top: 0;
-  height: 100%;
 }
 
 #icc-view > section > form,
